[package]
name = "prometheus_publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
telemetry_types = { version = "0.1.0", git = "https://github.com/broken-motorwerks/telemetry_types" }
anyhow = "1.0.93"
futures = "0.3.31"
prometheus = "0.13.4"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.12", default-features = false }
warp = "0.3.7"
